--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <div class="skill-tag">Git</div>
         <div class="skill-tag">LaTeX</div>
         <div class="skill-tag">Arduino</div>
+        <div class="skill-tag">Excel</div>
         <div class="skill-tag">Machine Learning</div>
         <div class="skill-tag">IoT</div>
         <div class="skill-tag">Blockchain</div>
