--- a/index.html
+++ b/index.html
@@ -180,28 +180,33 @@ header h1 {
 /* Navigation */
 nav {
   position: fixed;
-  top: 30px;
-  right: 30px;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1000;
   background: var(--bg-glass);
   backdrop-filter: blur(var(--blur-amount));
   border: 1px solid var(--glass-border);
   border-radius: 50px;
-  padding: 15px 25px;
+  padding: 12px 20px;
   box-shadow: var(--shadow-soft);
-  animation: slideInFromRight 0.8s ease-out;
+  animation: slideInFromTop 0.8s ease-out;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 nav a {
-  margin: 0 15px;
   color: var(--text-primary);
   text-decoration: none;
   font-weight: 500;
-  padding: 8px 16px;
+  padding: 10px 20px;
   border-radius: 25px;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   overflow: hidden;
+  white-space: nowrap;
+  font-size: 0.9rem;
 }
 
 nav a::before {
@@ -227,9 +232,9 @@ nav a:hover {
   box-shadow: 0 5px 15px rgba(100, 255, 218, 0.4);
 }
 
-@keyframes slideInFromRight {
-  0% { transform: translateX(100px); opacity: 0; }
-  100% { transform: translateX(0); opacity: 1; }
+@keyframes slideInFromTop {
+  0% { transform: translateX(-50%) translateY(-50px); opacity: 0; }
+  100% { transform: translateX(-50%) translateY(0); opacity: 1; }
 }
 
 /* Button Styles */
@@ -539,22 +544,24 @@ footer::before {
 /* Responsive Design */
 @media (max-width: 768px) {
   nav {
-    position: relative;
-    top: 0;
-    right: 0;
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 90vw;
   }
   
   nav a {
-    margin: 5px 0;
+    padding: 8px 15px;
+    margin: 2px;
+    font-size: 0.8rem;
   }
   
   header {
-    padding: 2em 1em;
+    padding: 4em 1em 2em;
     min-height: 80vh;
   }
   
