--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
                     <span class="skill-tag">Webpack</span>
                     <span class="skill-tag">Vite</span>
                     <span class="skill-tag">Docker</span>
-                    <span class="skill-tag">AWS</span>
+<!--                     <span class="skill-tag">AWS</span> -->
                 </div>
             </div>
 
