--- a/index.html
+++ b/index.html
@@ -1960,7 +1960,7 @@
                         <div class="code-line">  name: <span class="string">'Chethan L R'</span><span class="operator">,</span></div>
                         <div class="code-line">  role: <span class="string">'Frontend Developer'</span><span class="operator">,</span></div>
                         <div class="code-line">  passion: <span class="string">'Creating Amazing UX'</span><span class="operator">,</span></div>
-                        <div class="code-line">  experience: <span class="number">3</span> <span class="operator">+</span> <span class="string">'years'</span><span class="operator">,</span></div>
+<!--                         <div class="code-line">  experience: <span class="number">3</span> <span class="operator">+</span> <span class="string">'years'</span><span class="operator">,</span></div> -->
                         <div class="code-line">}; <span class="comment">// Let's build together! 🚀</span></div>
                     </div>
                 </div>
@@ -2041,8 +2041,8 @@
                     <span class="skill-tag">PHP</span>
                     <span class="skill-tag">MySQL</span>
                     <span class="skill-tag">MongoDB</span>
-                    <span class="skill-tag">PostgreSQL</span>
-                    <span class="skill-tag">Redis</span>
+<!--                     <span class="skill-tag">PostgreSQL</span>
+                    <span class="skill-tag">Redis</span> -->
                 </div>
             </div>
 
@@ -2059,7 +2059,7 @@
                     <span class="skill-tag">Webpack</span>
                     <span class="skill-tag">Vite</span>
                     <span class="skill-tag">Docker</span>
-                    <span class="skill-tag">CI/CD</span>
+<!--                     <span class="skill-tag">CI/CD</span> -->
                 </div>
             </div>
 
@@ -2075,8 +2075,8 @@
                     <span class="skill-tag">Machine Learning</span>
                     <span class="skill-tag">Progressive Web Apps</span>
                     <span class="skill-tag">GraphQL</span>
-                    <span class="skill-tag">Serverless</span>
-                    <span class="skill-tag">Microservices</span>
+<!--                     <span class="skill-tag">Serverless</span>
+                    <span class="skill-tag">Microservices</span> -->
                 </div>
             </div>
         </div>
@@ -2142,7 +2142,7 @@
                         <span class="tech-tag">TensorFlow</span>
                         <span class="tech-tag">Node.js</span>
                         <span class="tech-tag">MongoDB</span>
-                        <span class="tech-tag">Socket.io</span>
+<!--                         <span class="tech-tag">Socket.io</span> -->
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/chethanlr" class="project-link" target="_blank">
@@ -2171,8 +2171,8 @@
                         <span class="tech-tag">PHP</span>
                         <span class="tech-tag">MySQL</span>
                         <span class="tech-tag">Chart.js</span>
-                        <span class="tech-tag">JWT</span>
-                        <span class="tech-tag">Redis</span>
+<!--                         <span class="tech-tag">JWT</span>
+                        <span class="tech-tag">Redis</span> -->
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/chethanlr" class="project-link" target="_blank">
