--- a/index.html
+++ b/index.html
@@ -2223,7 +2223,7 @@
             <a href="https://twitter.com/chethanlr" class="social-link" target="_blank" title="Twitter">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://instagram.com/chethanlr" class="social-link" target="_blank" title="Instagram">
+            <a href="https://instagram.com/chethan.l.r6" class="social-link" target="_blank" title="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
