--- a/index.html
+++ b/index.html
@@ -2220,7 +2220,7 @@
             <a href="mailto:chethanlrlr2637@gmail.com" class="social-link" title="Email">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://twitter.com/chethanlr" class="social-link" target="_blank" title="Twitter">
+            <a href="https://twitter.com/ChethanLR241024" class="social-link" target="_blank" title="Twitter">
                 <i class="fab fa-twitter"></i>
             </a>
             <a href="https://instagram.com/chethan.l.r6" class="social-link" target="_blank" title="Instagram">
